# fliq

./: 404.html  README.md  api.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  readme_base.md  requirements-dev.txt  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: core_build.yml  coverage.yml  docs.yml  package_publish.yml
benchmark/: benchmark.py  benchmark_old.py  benchmark_runner.py  csv_plotter.py  example.py  s1.csv  s2.csv  s3.csv
docs/: examples.md  getting_started.md  index.md
docs/misc/: performance.md
docs/reference/: api_intro.md  api_roadmap.md  mapper_methods.md  materializer_methods.md  partitioning.md  peeking.md  release_notes.md  snapshots.md
docs/reference/code_api/: api_index.md  mapper_methods.md  materializer_methods.md  peeking.md  representation.md  snapshots.md
examples/: benchmark.py  example.py  index.html
fliq/: __init__.py  _types.py  carrier.py  carry.py  channel.py  collector.py  exceptions.py  query.py  query_base.py  queryable.py  queryable_base.py  types.py  utils.py
fliq/tests/: fliq_test_utils.py  test_query.py  timer.py
fliq/tests/carriers/: test_carrier_distinct.py  test_carrier_exclude.py  test_carrier_order_by.py  test_carrier_reverse.py  test_carrier_select.py  test_carrier_where.py
fliq/tests/collectors/: test_collector_aggregate.py  test_collector_all.py  test_collector_any.py  test_collector_contains.py  (+11 more)
getting_started/: index.html
misc/performance/: index.html
reference/api_intro/: index.html
reference/api_roadmap/: index.html
reference/release_notes/: index.html
scripts/: execute_doc_files.py  gen_docs.py  generate_docs.py  single_file_coverage_check.py
search/: search_index.json
(+76 files in other folders)
