[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=6.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fliq"
version = "1.10.0"
description = "Fluent-based Lazily-evaluated Integrated Query for Python"
readme = "README.md"
authors = [{ name = "Ori Bar-ilan", email = "python.oplog@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fliq", "lazy", "fluent", "lisp", "linq"]
dependencies = [
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/oribarilan/fliq"

[tool.ruff]
line-length = 100  # defaults to 88 like black

[tool.mypy]
strict = true

# To exclude specific directories or files, use the following format:
[[tool.mypy.overrides]]
module = "fliq/tests/*"
ignore_errors = true